# autodocgen

./: CLAUDE.md  README.md  pyproject.toml  script.py
.github/workflows/: deploy.yml  publish.yml  pull_request.yml
src/autodocgen/: __init__.py  ast_analyzer.py  cli.py  file_visitor.py  method_visitor.py
tests/autodocgen/: test_ast_analyzer.py  test_cli.py
