[tool.poetry]
name = "auto-doc-gen"
version = "0.1.0"
description = "Automatically generate documentation for Python code using OpenAI models."
authors = ["Rohan Sobha <rohanraysobha@gmail.com>"]
readme = "README.md"
packages = [{include = "autodocgen"}]

[tool.poetry.dependencies]
python = "^3.9"
astunparse = "^1.6.3"
openai = "^0.27.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
